infra/k8s/overlays/dev/patch-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pjb-api
spec:
  replicas: 1
  template:
    spec:
      securityContext:
        fsGroup: 10001
        runAsGroup: 10001
        runAsNonRoot: true
        runAsUser: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: backend
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 10001
            runAsNonRoot: true
            runAsUser: 10001
          imagePullPolicy: Never
          resources:
            requests:
              cpu: "250m"
              memory: 768Mi
            limits:
              cpu: "1"
              memory: 1536Mi
