infra/k8s/overlays/dev/patch-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pjb-worker
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: backend
          imagePullPolicy: Never
          resources:
            requests:
              cpu: "250m"
              memory: 768Mi
            limits:
              cpu: "1"
              memory: 1536Mi
